✨ chore: Update dependencies and improve Go ORM helper functionality